frontend/test/should_pass/modalt1.gm
using modbase;

node class Foo extends Common
{
	foo : int;
}
